test both vector species if on 512-bit-capable platform